enable all errorprone checks by default and resolve their nit warnings